doc: get all event
